[tool.poetry]
name = "zen_ocean"
version = "0.1.0"
description = ""
authors = ["Cybnon <stefan.weber93@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lupa = "^1.9"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
typing-extensions = "^4.4.0"
ocean-lib = "^1.6.1"
shell = "^1.0.1"
coincurve = "^17.0.0"
substrateinterface = "^1.0.0"
pysha3 = "^1.0.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
