[tool.poetry]
name = "zen_ocean"
version = "0.1.0"
description = ""
authors = ["Cybnon <stefan.weber93@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lupa = "^1.14.1"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
typing-extensions = "^4.4.0"
ocean-lib = "^1.6.1"
shell = "^1.0.1"
coincurve = "^18.0.0"
substrateinterface = "^1.0.0"
pysha3 = "^1.0.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
